--- a/frontend-react-js/src/index.css
+++ b/frontend-react-js/src/index.css
@@ -1,8 +1,18 @@
+:root {
+  --bg: rgb(40, 10, 80);
+  --fg: rgb(8,1,14);
+
+  --field-border: rgba(255, 255, 255, 0.29);
+  --field-border-focus: rgb(45, 10, 71);
+  --field-bg: rgb(34, 18, 57);
+}
+
+
 * { box-sizing: border-box; }
 html,body { 
   height: 100%; 
   width: 100%; 
-  background: rgb(14,3,28);
+  background: var(--bg);
 }
 
 body {
